--- a/src/Components/MainServer/Categories/Categories.css
+++ b/src/Components/MainServer/Categories/Categories.css
@@ -13,7 +13,8 @@
 }
 
 .categorie span{
-    font-weight: 700;
+    font-size: 12px;
+    font-weight: 600;
     color: #949ba4;
     padding: 0 10px;
 }
