--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html{
 
 body,#root{
     background-color: var(--bg-aside);
+    background-color: whitesmoke;
     height: 100vh;
     width: 100vw;
 }
